kubernetes/03_ingresses/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fla-service-a-ingress
  namespace: fla-na-a
  annotations:
#   kubernetes.io/ingress.class: nginx
#   nginx.ingress.kubernetes.io/rewrite-target: /$1  ## minikube ingress
#   ingress.kubernetes.io/ssl-redirect: "true"
#   ingress.kubernetes.io/ssl-passthrough: "true"
#   kubernetes.io/ingress.allow-http: "false"  # only HTTPS
#   networking.gke.io/managed-certificates: "my-domain-com-managed-by-google"  # https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-multi-ssl#specifying_certificates_for_your_ingress
#   cloud.google.com/backend-config: '{"default": "fla-backendconfig-a"}'
#   kubernetes.io/ingress.global-static-ip-name: "web-static-ip-name"  # https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer#optional_configuring_a_static_ip_address
spec:
  tls:
  - hosts:
    - my.domain1.com
    - local.poxsilver5.store
    secretName: secret-main-domain-tls

  defaultBackend:
    service:
      name: fla-service-a
      port:
        #name: http-web
        number: 8080  # for gke with NodePort
  rules:
  - host: local.poxsilver5.store  # my.domain1.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: fla-service-a
            port:
              #name: http-web
              number: 8080  # for gke with NodePort
  - http:
      paths:
      - path: /subpath/
        pathType: Prefix  # Exact | Prefix (ImplementationSpecific)
        backend:
          service:
            name: fla-service-b
            port:
              number: 8080
